# coin-flip

./: Anchor.toml  SHFoTCoxJVyhdMBjcPobySCVrzL8BDubsQKBGFAq1Ra.json  package.json  tsconfig.json
programs/program-derived-addresses/: Cargo.toml
programs/program-derived-addresses/src/: lib.rs
programs/program-derived-addresses/src/instructions/: increment.rs  mod.rs
programs/program-derived-addresses/src/state/: mod.rs
tests/: HARi.json  test-prog.ts
